--- a/AutoLuby/README
+++ b/AutoLuby/README
@@ -2,7 +2,9 @@ AutoLuby
 Descrição da prova:
 Esta prova consiste na criação de um sistema para gerenciamento de uma loja que realiza venda de veículos.
 Todos os campos que não estão marcados com (OPCIONAL) são obrigatórios.
-As colunas que descrevemos para os cruds poderão ser modificadas, de acordo com o que o desenvolvedor acredita ser a melhor forma de codificação. A criação de colunas e tabelas, poderão ser incluídas também, de acordo com o que o desenvolvedor sentir a necessidade.
+As colunas que descrevemos para os cruds poderão ser modificadas, de acordo com o que o desenvolvedor acredita ser a melhor forma de codificação. A criação de colunas e tabelas, 
+poderão ser incluídas também, de acordo com o que o desenvolvedor sentir a necessidade.
+
 REQUISITOS FUNCIONAIS
 RF01 - CRUD de funcionários
 Cadastro:
